--- a/styles.css
+++ b/styles.css
@@ -26,12 +26,17 @@ img {
 nav {
     background-color: #000;
     padding: 0.5em;
+    position: sticky;
+    top: 0;
+
 }
 
 nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
+    display: flex;
+    justify-content: space-between;
 }
 
 nav a {
